# power_market_sim

./: .gitignore  AGENTS.md  BIDDING_FORMAT_ANALYSIS.md  BLOCK_BIDDING_IMPLEMENTATION.md  BUG_FIXES_SUMMARY.md  CHANGES.txt  COMPLEX_NETWORK_MODELING_ANALYSIS.md  COMPREHENSIVE_TEST_REPORT.md  DUAL_VARIABLES_FIX_REPORT.md  FUTURE_DEVELOPMENT_ROADMAP.md  IEEE_50_BUS_CASE_SUMMARY.md  IEEE_50_BUS_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_PLAN_DETAILED.md  LATEST_UPDATES_SUMMARY.md  MANIFEST.in  OPF_IMPLEMENTATION_ANALYSIS.md  PRECISE_BIDDING_ANALYSIS.md  PROJECT_STATUS.md  QUICK_START_CN.md  README.textile  README_CN.md  SEGMENT_BIDDING_ANALYSIS.md  SIMPOWER_DOCUMENTATION.md  TEST_RESULTS_SUMMARY.md  requirements.txt  setup.py  test.sh  test_basic_functionality.py
agent_power_market/: README.md  pyproject.toml
agent_power_market/cq_market/: agents.py  bid_validator.py  ieee_network.py  models.py  rt_clearing.py  settlement.py
agent_power_market/cq_market/tests/: test_market.py
cq_power_market/: pyproject.toml
doc/: build.py
examples/: basic_examples.py  block_bidding_demo.py  marginal_cost_bidding_demo.py  segment_bidding_demo.py  simple_block_bidding_test.py  simple_demo.py  simple_marginal_bidding_test.py  simple_segment_bidding_test.py  test_block_bidding_integration.py
scripts/: create_96periods_case.py  create_simplified_ieee_case.py  final_fix_columns.py  final_fix_data_format.py  final_fix_ieee_50.py  fix_bidding_curves.py  fix_bus_names.py  fix_chinese_font.py  fix_ieee_50_bus_case.py  generate_ieee_50_bus_case.py  prepare_ieee_50_bus_case.py
(+467 files in other folders)
